<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeholderResources"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4EFFC"
    tools:context=".fragments.PlaceHolderResources">


    <TextView
        android:id="@+id/MoodTitle"
        android:layout_width="342dp"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"

        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="true"
        android:text="Placeholder"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#081042"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="527dp"
        android:text="Sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextText11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoodTitle" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="26dp"
        android:text="Sample"
        app:layout_constraintEnd_toStartOf="@+id/editTextText14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoodTitle" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="27dp"
        android:text="Sample"
        app:layout_constraintEnd_toStartOf="@+id/editTextText15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoodTitle" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="26dp"
        android:text="Sample"
        app:layout_constraintEnd_toStartOf="@+id/editTextText16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoodTitle" />

    <EditText
        android:id="@+id/editTextText11"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:inputType="text"
        android:text="PLACEHOLDER"
        app:layout_constraintBottom_toTopOf="@+id/editTextText14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText14"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="105dp"
        android:ems="10"
        android:inputType="text"
        android:text="PLACEHOLDER"
        app:layout_constraintBottom_toTopOf="@+id/editTextText15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText15"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:inputType="text"
        android:text="PLACEHOLDER"
        app:layout_constraintBottom_toTopOf="@+id/editTextText16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText16"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="137dp"
        android:ems="10"
        android:inputType="text"
        android:text="PLACEHOLDER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/editTextText15" />


</androidx.constraintlayout.widget.ConstraintLayout>