<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4EFFC"
    tools:context=".fragments.resourcesFragments.ResourcesFragment">


    <TextView
        android:id="@+id/MoodTitle"
        android:layout_width="342dp"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="7dp"

        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="true"
        android:text="Resources"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#081042"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/emergencyContactsPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/emergencyContactsPage"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="527dp"
        android:text="Emergency Contacts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/MoodTitle"
        app:layout_constraintTop_toBottomOf="@+id/MoodTitle" />

    <Button
        android:id="@+id/selfHelp"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="136dp"
        android:text="Self Help Strategies"
        app:layout_constraintStart_toStartOf="@+id/MoodTitle"
        app:layout_constraintTop_toBottomOf="@+id/MoodTitle" />

    <Button
        android:id="@+id/educationMaterial"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="268dp"
        android:text="Education Material"
        app:layout_constraintStart_toStartOf="@+id/MoodTitle"
        app:layout_constraintTop_toBottomOf="@+id/MoodTitle" />

    <Button
        android:id="@+id/SupportGroup"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="392dp"
        android:text="Support Group"
        app:layout_constraintStart_toStartOf="@+id/MoodTitle"
        app:layout_constraintTop_toBottomOf="@+id/MoodTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>