...
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item android:id="@+id/moodButton"
        android:enabled="true"
        android:icon="@drawable/add_circle"
        android:title="@string/add_mood"/>
    <item android:id="@+id/resourcesButton"
        android:enabled="true"
        android:icon="@drawable/library_books"
        android:title="@string/resources"/>
    <item android:id="@+id/accountButton"
        android:enabled="true"
        android:icon="@drawable/account_circle"
...
