<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.tutorialFragments.TutorialFragment4">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/eulaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="40dp"
                android:paddingTop="40dp"
                android:paddingRight="40dp"
                android:paddingBottom="0dp"
                android:text="@string/eula"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <Button
                android:id="@+id/acceptEulaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/eula_accept"
                android:textSize="20sp" />
        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>