...

    <!--Tutorial page strings-->
    <string name="tut_content_desc">Graphic of a woman with flowers blooming from her head</string>
    <string name="tut_1_text">Welcome to Feel Good Inc.</string>
    <string name="tut_2_text">A daily mental health journaling tool</string>
    <string name="tut_3_text">Select your current mood\n\nWrite a log\n\nSee trends\nover time\n\nFeel Good!</string>
    <string name="eula_accept">Accept</string>
    <string name="eula">
                Feel Good Inc. should not be viewed as a substitute for therapy or other psychological or
                psychiatric treatment, nor should they be considered a substitute for a diagnosis or
                medical advice.\n\nNotwithstanding the scientific research on journaling, Feel Good Inc. makes no representation
                or warranty that the User’s mental health will improve. Reliance on the Apps and the
                information they contain is strictly at the User’s risk. If the App licensee has been
...
    <!--Nav bar strings-->
    <string name="activities">Activities</string>
    <string name="add_mood">Add mood</string>
    <string name="home">Home</string>
    <string name="resources">Resources</string>
    <string name="account">Account</string>
    <string name="tutorial">Tutorial</string>
    <!--Account page strings-->
    <string name="email_example">exampleuser@feelgood.com</string>
    <string name="email_tag">Email:</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password_tag">Enter New Password:</string>
    <string name="enter_password">Enter password</string>
...
